--- a/src/working_with_pdfs/yaml/sample_resume.yaml
+++ b/src/working_with_pdfs/yaml/sample_resume.yaml
@@ -51,3 +51,22 @@ skills:
             - "SQL"
             - "RStudio"
             - "C++"
+education:
+    - edu_0:
+        - school_name: "University0"
+        - graduation_date:
+            - month: "MM"
+            - year: "YYYY"
+        - gpa: "4.0/4.0"
+        - courses:
+              - "Machine Learning"
+              - "Computer Vision"
+    - edu_1:
+        - school_name: "UniversityOne"
+        - graduation_date:
+            - month: "MM"
+            - year: "YYYY"
+        - gpa: "7.0/10.0"
+        - courses:
+              - "Reinforcement Learning"
+              - "Computer Vision"
